<resources>
    <string name="app_name">Bill Calculator</string>
    <string name="amt">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="noSVS">NO SVS</string>
    <string name="SVS">SVS</string>
    <string name="noGST">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="payNow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>